--- a/_locales/fr/translation.json
+++ b/_locales/fr/translation.json
@@ -3,5 +3,6 @@
     "txt_hours": "heures",
     "txt_min": "minutes",
     "txt_sec": "secondes",
-    "all-cache": "Tous les caches"
+    "all-cache": "Tous les caches",
+    "txt_passwords": "Mot de passes"
 }
