fench and english translation updates #1

--- a/_locales/en/translation.json
+++ b/_locales/en/translation.json
@@ -3,5 +3,5 @@
     "txt_hours": "hours",
     "txt_min": "minutes",
     "txt_sec": "seconds",
-    "all-cache": "All types of Cache"
+    "txt_all-cache": "All types of Cache"
 }
