--- a/_locales/en/translation.json
+++ b/_locales/en/translation.json
@@ -3,5 +3,15 @@
     "txt_hours": "hours",
     "txt_min": "minutes",
     "txt_sec": "seconds",
-    "txt_all-cache": "All types of Cache"
+    "txt_all-cache": "All types of Cache",
+    "txt_all-time": "Since ever",
+    "txt_submit":  "Clear",
+    "txt_passwords": "Passwords",
+    "txt_plugindata": "Plugins Data",
+    "txt_filesystems": "Files System",
+    "txt_formdata": "Form Data",
+    "span_days": "For how many days ?",
+    "span_hours": "For how many hours ?",
+    "span_min": "For how many min ?",
+    "span_sec": "For how many secs ?"
 }
