#1 : french translation ok

--- a/_locales/fr/translation.json
+++ b/_locales/fr/translation.json
@@ -6,12 +6,22 @@
     "txt_all-cache": "Tous les caches",
     "txt_all-time": "Depuis toujours",
     "txt_submit":  "Nettoyer",
-    "txt_passwords": "Mot de passes",
-    "txt_plugindata": "Donnees des plugins",
-    "txt_filesystems": "Fichier systeme",
+    "txt_cache": "Cache",
+    "txt_appcache": "Cache d'application",
+    "txt_cookies": "Cookies",
+    "txt_websql": "WebSQL",
+    "txt_indexdb": "IndexedDB",
     "txt_formdata": "Donnees de formulaires",
+    "txt_filesystems": "Fichier systeme",
+    "txt_localstorage": "Stockage Local",
+    "txt_plugindata": "Donnees des plugins",
+    "txt_download": "Telechargements",
+    "txt_history": "Historique",
+    "txt_passwords": "Mot de passes",
     "span_days": "Depuis combien de jours ?",
     "span_hours": "Depuis combien d'heures ?",
     "span_min": "Depuis combien de minutes ?",
-    "span_sec": "Depuis combien de secondes ?"
+    "span_sec": "Depuis combien de secondes ?",
+    "txt_save": "Sauvegarder",
+    "txt_help": "Aide"
 }
