Update #1 : english translation

--- a/_locales/en/translation.json
+++ b/_locales/en/translation.json
@@ -1,17 +1,27 @@
 {
-    "txt_days": "days",
+   "txt_days": "days",
     "txt_hours": "hours",
     "txt_min": "minutes",
     "txt_sec": "seconds",
-    "txt_all-cache": "All types of Cache",
-    "txt_all-time": "Since ever",
+    "txt_all-cache": "Evrything",
+    "txt_all-time": "Since Ever",
     "txt_submit":  "Clear",
-    "txt_passwords": "Passwords",
-    "txt_plugindata": "Plugins Data",
+    "txt_cache": "Cache",
+    "txt_appcache": "App Cache",
+    "txt_cookies": "Cookies",
+    "txt_websql": "WebSQL",
+    "txt_indexdb": "IndexedDB",
+    "txt_formdata": "Forms Data",
     "txt_filesystems": "Files System",
-    "txt_formdata": "Form Data",
-    "span_days": "For how many days ?",
-    "span_hours": "For how many hours ?",
-    "span_min": "For how many min ?",
-    "span_sec": "For how many secs ?"
+    "txt_localstorage": "Local Storage",
+    "txt_plugindata": "Plugin Data",
+    "txt_download": "Downloads",
+    "txt_history": "History",
+    "txt_passwords": "Passwords",
+    "span_days": "How many days ?",
+    "span_hours": "How many hours ?",
+    "span_min": "How many minutes ?",
+    "span_sec": "How many seconds ?",
+    "txt_save": "Save",
+    "txt_help": "help"
 }
