trying to fix remove issue

--- a/_locales/en/translation.json
+++ b/_locales/en/translation.json
@@ -3,7 +3,7 @@
     "txt_hours": "hours",
     "txt_min": "minutes",
     "txt_sec": "seconds",
-    "txt_all-cache": "Evrything",
+    "txt_all-cache": "Every Data",
     "txt_all-time": "Since Ever",
     "txt_submit":  "Clear",
     "txt_cache": "Cache",
