German translation ok

--- a/_locales/ger/translation.json
+++ b/_locales/ger/translation.json
@@ -1,2 +1,27 @@
 {
+    "txt_days": "Tage",
+    "txt_hours": "Stunden",
+    "txt_min": "Minuten",
+    "txt_sec": "Sekunden",
+    "txt_all-cache": "Gesamte Cache",
+    "txt_all-time": "Gesamte Zeitraum",
+    "txt_submit":  "Senden",
+    "txt_cache": "Cache",
+    "txt_appcache": "Applikationscache",
+    "txt_cookies": "Cookies",
+    "txt_websql": "WebSQL",
+    "txt_indexdb": "Datenbankindex",
+    "txt_formdata": "Formulardaten",
+    "txt_filesystems": "Systemdateien",
+    "txt_localstorage": "Lokalspeicher",
+    "txt_plugindata": "Plugindaten",
+    "txt_download": "Herunterladen",
+    "txt_history": "Verlauf",
+    "txt_passwords": "Passwoerter",
+    "span_days": "Seit wievielen Tagen?",
+    "span_hours": "Seit wievielen Stunden?",
+    "span_min": "Seit wievielen Minuten?",
+    "span_sec": "Seit wievielen Sekunden?",
+    "txt_save": "Speichern",
+    "txt_help": "Hilfe"
 }
