--- a/_locales/spa/translation.json
+++ b/_locales/spa/translation.json
@@ -1,18 +1,18 @@
 {
     
-    "txt_days": "أيام",
-    "txt_hours": "ساعات",
-    "txt_min": "دقائق",
-    "txt_sec": "ثواني",
-    "txt_all-cache": "جميع مختزن المتصفح",
-    "txt_all-time": "منذ البداية",
-    "txt_submit":  "تنظيف",
-    "txt_cache": "مختزن المتصفح",
-    "txt_appcache": "مختزن التطبيقات",
-    "txt_cookies": "ملفات تعريف الارتباط",
+    "txt_days": "dias",
+    "txt_hours": "horas",
+    "txt_min": "minutos",
+    "txt_sec": "segundos",
+    "txt_all-cache": "cada cache",
+    "txt_all-time": "cada vez",
+    "txt_submit":  "presentar",
+    "txt_cache": "cache",
+    "txt_appcache": "app cache",
+    "txt_cookies": "cookies",
     "txt_websql": "WebSQL",
     "txt_indexdb": "IndexedDB",
-    "txt_formdata": "بيانات النموذج",
-    "txt_filesystems": "ملف النظام",
-    "txt_localstorage": "التخزين المحلي"
+    "txt_formdata": "datos del formulo",
+    "txt_filesystems": "systema de archivos",
+    "txt_localstorage": "almacen local"
 }
